# fcp-subs-whisper

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/fcp_subs_whisper/: main.py
tests/: test_subtitles.py
